--- a/HappyFarm/HappyFarm.vcxproj.filters
+++ b/HappyFarm/HappyFarm.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="State.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Farmland.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Farm.cpp">
@@ -51,6 +54,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="State.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Farmland.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
